Add a different trigger for testing

--- a/.github/workflows/assemblyline.yml
+++ b/.github/workflows/assemblyline.yml
@@ -1,8 +1,13 @@
 name: "Fetch CAPE parsers from upstream and make compatible with Assemblyline"
 
+# on:
+#   schedule:
+#     - cron: "0 0 * * *" # daily at midnight
+
 on:
-  schedule:
-    - cron: "0 0 * * *" # daily at midnight
+  push:
+    branches:
+      - main
 
 jobs:
   upstream_sync:
