--- a/.github/workflows/assemblyline.yml
+++ b/.github/workflows/assemblyline.yml
@@ -1,13 +1,13 @@
 name: "Fetch CAPE parsers from upstream and make compatible with Assemblyline"
 
-# on:
-#   schedule:
-#     - cron: "0 0 * * *" # daily at midnight
-
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: 0 */4 * * * # Every 4 hours
+
+# on:
+#   push:
+#     branches:
+#       - main
 
 jobs:
   upstream_sync:
