Allow merging of unrelated histories

--- a/.github/workflows/assemblyline.yml
+++ b/.github/workflows/assemblyline.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git remote add upstream https://github.com/CAPESandbox/CAPE-parsers
           git fetch upstream
-          git merge upstream/main
+          git merge upstream/main --allow-unrelated-histories -m "chore: Sync with upstream CAPE parsers"
 
       - name: Inject CAPE's detection rules within the extractors
         run: |
