When merging, favour upstream changes

--- a/.github/workflows/assemblyline.yml
+++ b/.github/workflows/assemblyline.yml
@@ -35,7 +35,7 @@ jobs:
           git config user.email "github-actions@github.com"
           git remote add upstream https://github.com/CAPESandbox/CAPE-parsers
           git fetch upstream
-          git merge upstream/main --allow-unrelated-histories -m "chore: Sync with upstream CAPE parsers"
+          git merge -X theirs upstream/main --allow-unrelated-histories -m "chore: Sync with upstream CAPE parsers"
           git push origin main
 
       - name: Inject CAPE's detection rules within the extractors
